force-app/main/default/objects/Translation__mdt/Translation__mdt.object-meta.xml
<CustomObject>
    <label>Translation</label>
    <pluralLabel>Translations</pluralLabel>
</CustomObject>