force-app/main/default/objects/Translation__mdt/fields/Language1__c.field-meta.xml
<CustomField>
    <fullName>Language1__c</fullName>
    <label>Language1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>