force-app/main/default/objects/Translation__mdt/fields/Language2__c.field-meta.xml
<CustomField>
    <fullName>Language2__c</fullName>
    <label>Language2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>