force-app/main/default/objects/Translation__mdt/fields/To_Language__c.field-meta.xml
<CustomField>
    <fullName>To_Language__c</fullName>
    <label>To Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Swedish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>